--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -18,6 +18,7 @@ library(tidyverse)
 
 ``` r
 library(ggplot2)
+library(patchwork)
 ```
 
 # Problem 1
@@ -332,8 +333,9 @@ result_df %>%
 1.  Estimate the proportion of homicides that are unsolved in each city
 
 2.  Tidy hypothesis outputs of the dataframe (Remove “Tulsa,AL” before
-    making hypothesis test since there is no unsolved homicides in this
-    city therefore CI and proportion don’t need to be estimated )
+    making hypothesis test since there is no unsolved homicides and only
+    one homicide in this city therefore CI and proportion don’t need to
+    be estimated )
 
 3.  Create a new dataframe containing variables in num_of_homicide_df
     dataframe and two new variables: City_unsolved_homicide and
@@ -447,25 +449,25 @@ bind_rows(output)
 ```
 
     ## # A tibble: 5,000 × 2
-    ##    mu_hat p_value
-    ##     <dbl>   <dbl>
-    ##  1  0.608   0.477
-    ##  2 -0.313   0.776
-    ##  3  0.472   0.568
-    ##  4  0.162   0.793
-    ##  5 -0.472   0.633
-    ##  6 -0.266   0.783
-    ##  7  0.774   0.470
-    ##  8  0.906   0.284
-    ##  9  0.181   0.856
-    ## 10  0.693   0.473
+    ##     mu_hat p_value
+    ##      <dbl>   <dbl>
+    ##  1  1.21    0.150 
+    ##  2 -1.72    0.0441
+    ##  3  0.0774  0.940 
+    ##  4 -0.772   0.427 
+    ##  5  1.98    0.0349
+    ##  6 -1.20    0.277 
+    ##  7 -0.244   0.840 
+    ##  8  1.70    0.0101
+    ##  9  0.814   0.367 
+    ## 10  0.139   0.904 
     ## # … with 4,990 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
 
 ``` r
 sim_results = tibble(
-  mu = c(1,2,3,4,5,6)
+  mu = c(0,1,2,3,4,5,6)
 ) %>% 
   mutate(
     output_lists = map(.x = mu,~rerun(5000,sim_estimate_pvalue(30,.x,5))),
@@ -491,20 +493,20 @@ sim_results = sim_results %>%
 sim_results
 ```
 
-    ## # A tibble: 30,000 × 4
-    ##       mu   mu_hat p_value conclusion    
-    ##    <dbl>    <dbl>   <dbl> <chr>         
-    ##  1     1  2.35    0.0343  reject        
-    ##  2     1  0.00302 0.998   fail to reject
-    ##  3     1 -0.213   0.765   fail to reject
-    ##  4     1  0.480   0.564   fail to reject
-    ##  5     1  0.425   0.584   fail to reject
-    ##  6     1  0.293   0.711   fail to reject
-    ##  7     1 -0.263   0.748   fail to reject
-    ##  8     1  0.678   0.531   fail to reject
-    ##  9     1  2.80    0.00349 reject        
-    ## 10     1  0.923   0.419   fail to reject
-    ## # … with 29,990 more rows
+    ## # A tibble: 35,000 × 4
+    ##       mu  mu_hat p_value conclusion    
+    ##    <dbl>   <dbl>   <dbl> <chr>         
+    ##  1     0  0.296  0.770   fail to reject
+    ##  2     0 -2.30   0.00945 reject        
+    ##  3     0 -0.0446 0.961   fail to reject
+    ##  4     0  0.324  0.792   fail to reject
+    ##  5     0 -0.0918 0.931   fail to reject
+    ##  6     0 -0.989  0.321   fail to reject
+    ##  7     0  1.55   0.116   fail to reject
+    ##  8     0  0.440  0.609   fail to reject
+    ##  9     0  0.283  0.783   fail to reject
+    ## 10     0  0.698  0.492   fail to reject
+    ## # … with 34,990 more rows
 
 1.  Count the number of total conclusions with each true mu
 
@@ -609,6 +611,19 @@ average_estimate_mu_reject
 
 ``` r
 ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu_for_reject_samples.pdf",average_estimate_mu, width = 8, height = 5)
+```
+
+Combine the plot of all samples and the plot of “rejected” samples
+
+``` r
+combine_plot = average_estimate_mu + average_estimate_mu_reject
+combine_plot
+```
+
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-19-1.png)<!-- -->
+
+``` r
+ggsave("./plots/combine_plot.pdf",combine_plot, width = 8, height = 5)
 ```
 
 Answer:
